Updated initial version

--- a/index.html
+++ b/index.html
@@ -152,22 +152,22 @@
                         <div class="row">
                             <div class="col-6 col-md-3 mb-3">
                                 <a href="#">
-                                    <img class="img-fluid" src="images/movies/blade_runner.jpg" alt=" image cap">
+                                    <img class="img-fluid" src="images/films/BladeRunner2049.jpg" alt=" image cap">
                                 </a>
                             </div>
                             <div class="col-6 col-md-3">
                                 <a href="#">
-                                    <img class="img-fluid" src="images/movies/rocky.jpg" alt=" image cap">
+                                    <img class="img-fluid" src="images/films/rocky.jpg" alt=" image cap">
                                 </a>
                             </div>
                             <div class="col-6 col-md-3">
                                 <a href="#">
-                                    <img class="img-fluid" src="images/movies/terminator.jpg" alt=" image cap">
+                                    <img class="img-fluid" src="images/films/terminator.jpg" alt=" image cap">
                                 </a>
                             </div>
                             <div class="col-6 col-md-3">
                                 <a href="#">
-                                    <img class="img-fluid" src="images/movies/titanic.jpg" alt=" image cap">
+                                    <img class="img-fluid" src="images/films/titanic.jpg" alt=" image cap">
                                 </a>
                             </div>
                         </div>
@@ -241,7 +241,7 @@
                         <a href="#">
                             <i class="display-1 fa fa-list-ol"></i>
                             <h2>Favourites</h2>
-                            <p>Create your list of movies and share with friends.</p>
+                            <p>Create your list of films and share with friends.</p>
                         </a>
                     </div>
                 </div>
