--- a/showings.html
+++ b/showings.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Template</title>
+    <title>Showings</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -103,9 +103,9 @@
                             </a>
                         </li>
                         <li class="breadcrumb-item">
-                            <a href="#">Library</a>
+                            <a href="repertoire.html">Repertoire</a>
                         </li>
-                        <li class="breadcrumb-item active" aria-current="page">Data</li>
+                        <li class="breadcrumb-item active" aria-current="page">Showings</li>
                     </ol>
                 </nav>
 
@@ -117,17 +117,81 @@
             <!-- ============== LEFT NAVIGATION ================ -->
             <nav class="col-md-2 mb-3">
                 <div class="btn-group-vertical w-100" role="group">
-                    <a href="about.html" class="btn btn-outline-blue">About</a>
-                    <a href="jury.html" class="btn btn-outline-blue">Jury</a>
-                    <a href="sponsors.html" class="btn btn-outline-blue">Sponsors</a>
-                    <a href="contact.html" class="btn btn-outline-blue">Contact</a>
+                    <a href="films.html" class="btn btn-outline-blue">Films</a>
+                    <a href="showings.html" class="btn btn-outline-blue">Showings</a>
+                    <a href="tickets.html" class="btn btn-outline-blue">Tickets</a>
                 </div>
 
             </nav>
             <!-- ============== MAIN CONTENT ================ -->
-            <div class="col-md-8">
-                main content
+            <div class="col-md-8" id="main_showings">
+                <div class="row mb-5">
+                    <div class="col">
+                        <div class="row">
+                            <dv class="col">
+                                <h2 class="text-blue">
+                                    List of showings
+                                </h2>
+                                <hr class="hr-blue"/>
+                            </dv>
+                        </div>
+                        <div class="row media">
+                            <div class="col-sm-7 text-center">
+                                <img class="img-fluid index-about-img mt-4" src="images/showings/akademija-28-sala.jpg" alt="Academy 28">
+                            </div>
+                            <div class="col-sm-5 media-body">
+                                <h3 class="mt-5 text-blue text-center">Academy 28</h5>
+                                <h6 class="mt-4 text-blue text-center"><i> Nemanjina 28, Belgrade, Serbia </i></h6>  
+                                <h6 class="text-blue text-center"><i> Contact: 011/3616-020  </i></h6>
+                            </div>
+                        </div>
+                        <div class="row media">
+                            <div class="col-sm-5 media-body">
+                                <h3 class="mt-5 text-blue text-center">Kinoteka</h5>
+                                <h6 class="mt-4 text-blue text-center"><i> Kosovska 11, Belgrade, Serbia </i></h6>  
+                                <h6 class="text-blue text-center"><i> Contact: 011/3248-250 </i></h6>
+                            </div>
+                            <div class="col-sm-7 order-first order-sm-last text-center">
+                                <img class="img-fluid index-about-img mt-4" src="images/showings/kinoteka-sala.jpg" alt="Kinoteka">
+                            </div>
+                        </div>
 
+                        <div class="row media">
+                            <div class="col-sm-7 text-center">
+                                <img class="img-fluid index-about-img mt-4" src="images/showings/cineplexx-tc-usce.jpg" alt="Cineplexx TC Usce">
+                            </div>
+                            <div class="col-sm-5 media-body">
+                                <h3 class="mt-5 text-blue text-center">Cineplexx TC Usce</h5>
+                                <h6 class="mt-4 text-blue text-center"><i> Bulevar Mihajla Pupina 4, Belgrade, Serbia </i></h6>  
+                                <h6 class="text-blue text-center"><i> Contact: 011/3113-370  </i></h6>
+                            </div>
+                        </div>
+                        
+                        <div class="row media">
+                            <div class="col-sm-5 media-body">
+                                <h3 class="mt-5 text-blue text-center">Fontana</h5>
+                                <h6 class="mt-4 text-blue text-center"><i> Pariske komune 13, Belgrade, Serbia </i></h6>  
+                                <h6 class="text-blue text-center"><i> Contact: 011/4128-142 </i></h6>
+                            </div>
+                            <div class="col-sm-7 order-first order-sm-last text-center">
+                                <img class="img-fluid index-about-img mt-4" src="images/showings/fontana-sala.jpg" alt="Fontana">
+                            </div>
+                        </div>
+                        
+                        <div class="row media">
+                            <div class="col-sm-7 text-center">
+                                <img class="img-fluid index-about-img mt-4" src="images/showings/dvorana-kulturnog-centra.jpg" alt="Cultural Centre of Belgrade">
+                            </div>
+                            <div class="col-sm-5 media-body">
+                                <h3 class="mt-5 text-blue text-center">Cultural Centre of Belgrade</h5>
+                                <h6 class="mt-4 text-blue text-center"><i> Kolarčeva 6, Belgrade, Serbia </i></h6>  
+                                <h6 class="text-blue text-center"><i> Contact: 011/2621-174  </i></h6>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
             </div>
 
             <!-- ============== BANNER ================ -->
