--- a/sponsors.html
+++ b/sponsors.html
@@ -132,7 +132,7 @@
                     </div>
                     <div class="col-12">
                         <a href="http://www.lukoil.rs">
-                            <img class="img-fluid" src="images/sponsors/sponzor_lukoil.png" alt="lukoil">
+                            <img class="card-img-top sponsor-img" src="images/sponsors/sponzor_lukoil.png" alt="lukoil">
                         </a>
                     </div>
                 </div>
@@ -142,32 +142,32 @@
                     </div>
                     <div class="col-6 col-lg-3">
                         <a href="https://www.mts.rs">
-                            <img class="card-img-top" src="images/sponsors/sponzor_mts.png" alt="mts">
+                            <img class="card-img-top sponsor-img" src="images/sponsors/sponzor_mts.png" alt="mts">
                         </a>
                     </div>
                     <div class="col-6 col-lg-3">
                         <a href="http://www.beg.aero/">
-                            <img class="card-img-top" src="images/sponsors/sponzor-aerodrom.png" alt="aerodrom">
+                            <img class="card-img-top sponsor-img" src="images/sponsors/sponzor-aerodrom.png" alt="aerodrom">
                         </a>
                     </div>
                     <div class="col-6 col-lg-3">
                         <a href="http://www.vodavoda.rs/">
-                            <img class="card-img-top" src="images/sponsors/sponzor_vodavoda.png" alt="vodavoda">
+                            <img class="card-img-top sponsor-img" src="images/sponsors/sponzor_vodavoda.png" alt="vodavoda">
                         </a>
                     </div>
                     <div class="col-6 col-lg-3 card">
                         <a href="http://www.endorfingastropub.com/">
-                            <img class="card-img-top" src="images/sponsors/sponzor_endorfingastropub.png" alt="endorfingastropub">
+                            <img class="card-img-top sponsor-img" src="images/sponsors/sponzor_endorfingastropub.png" alt="endorfingastropub">
                         </a>
                     </div>
                     <div class="col-6 col-lg-3">
                         <a href="http://zajecarskopivo.com/">
-                            <img class="card-img-top" src="images/sponsors/sponzor-zajecarsko.png" alt="zajecarsko">
+                            <img class="card-img-top sponsor-img" src="images/sponsors/sponzor-zajecarsko.png" alt="zajecarsko">
                         </a>
                     </div>
                     <div class="col-6 col-lg-3">
                         <a href="http://maderarestoran.com/">
-                            <img class="card-img-top" src="images/sponsors/sponzor_madera.png" alt="madera">
+                            <img class="card-img-top sponsor-img" src="images/sponsors/sponzor_madera.png" alt="madera">
                         </a>
                     </div>
                 </div>
@@ -177,12 +177,12 @@
                     </div>
                     <div class="col-6 col-md-3">
                         <a href="https://www.blic.rs/">
-                            <img class="card-img-top" src="images/sponsors/sponzor_blic.png" alt="blic">
+                            <img class="card-img-top sponsor-img" src="images/sponsors/sponzor_blic.png" alt="blic">
                         </a>
                     </div>
                     <div class="col-6 col-md-3 pt-2">
                         <a href="https://noizz.rs/">
-                            <img class="card-img-top" src="images/sponsors/sponzor-noizz.png" alt="noizz">
+                            <img class="card-img-top sponsor-img" src="images/sponsors/sponzor-noizz.png" alt="noizz">
                         </a>
                     </div>
                 </div>
