Updated films and fixed minor issues

--- a/awards.html
+++ b/awards.html
@@ -130,15 +130,15 @@
             </nav>
             <!-- ============== MAIN CONTENT ================ -->
             <div class="col-md-8">
-                <h2 class="text-blue">NAGRADE ŽIRIJA GLAVNOG TAKMIČARSKOG PROGRAMA</h2>
+                <h2 class="text-blue">Awards for the main competition programme</h2>
                 <ul>
-                    <li>&nbsp; &nbsp; Nagrada &bdquo;Beogradski pobednik&ldquo; za najbolji film - dodeljuje se producentu&nbsp;</li>
-                    <li>&nbsp; &nbsp; Specijalna Nagrada žirija&nbsp;</li>
-                    <li>&nbsp; &nbsp; Nagrada za najbolju režiju</li>
-                    <li>&nbsp; &nbsp; Nagrada za najbolju žensku ulogu</li>
-                    <li>&nbsp; &nbsp; Nagrada za najbolju mušku ulogu</li>
-                    <li>&nbsp; &nbsp; Nagrada za najbolji scenario</li>
-                    <li>&nbsp; &nbsp; Nagrada za najbolji debi&nbsp;</li>
+                    <li> &nbsp; &nbsp; Award &bdquo; Belgrade Winner &ldquo; for the best movie - awarded to the producer </ li>
+                                             <li> &nbsp; &nbsp; Special Jury Award &nbsp; </ li>
+                                             <li> &nbsp; &nbsp; Best Direction Award </ li>
+                                             <li> &nbsp; &nbsp; Best Female Role Award </ li>
+                                             <li> &nbsp; &nbsp; Award for the best male role </ li>
+                                             <li> &nbsp; &nbsp; Best Scenario Award </ li>
+                                             <li> &nbsp; &nbsp; Best debut award &nbsp; </ li>
                 </ul>
             </div>
 
