--- a/html_films/killerelite.html
+++ b/html_films/killerelite.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title id="name">Rocky</title>
+    <title id="name">Killer Elite</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -24,7 +24,7 @@
 
 </head>
 
-<body onload="showFilm(5)">
+<body onload="showFilm(4)">
 
     <!-- ============== FILM FESTIVAL NAVBAR ================ -->
     <nav class="navbar navbar-expand-md navbar-light bg-blue">
@@ -52,7 +52,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-pills mx-auto text-blue text-uppercase">
                     <li class="nav-item">
-                        <a class="nav-link h4" href="index.html">Home</a>
+                        <a class="nav-link h4" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -79,11 +79,11 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link h4" href="actors.html">Actors</a>
+                        <a class="nav-link h4" href="../actors.html">Actors</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link h4" href="news.html">News</a>
+                        <a class="nav-link h4" href="../news.html">News</a>
                     </li>
 
                     <li class="nav-item">
@@ -110,7 +110,7 @@
                         <li class="breadcrumb-item" aria-current="page">
                             <a href="../films.html"> Films </a>
                         </li>
-                        <li class="breadcrumb-item active" aria-current="page">Rocky</li>
+                        <li class="breadcrumb-item active" aria-current="page">Killer Elite</li>
                     </ol>
                 </nav>
 
@@ -201,7 +201,7 @@
                 <!-- ============== SHOWINGS ================ -->
                 <div class="row mt-5">
                     <div class="col-12  rounded">
-                        <h3 class="text-center text-blue" > Showings </h3>
+                        <h3 class="text-center text-blue"> Showings </h3>
                         <div class="mt-3 card text-center" id="showing">
                             <div class="card-header bg-blue p-1 font-weight-bold font-italic" id="place1"> </div>
                             <div class="card-body p-0">
