--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <!-- ============== CAROUSEL ================ -->
         <div class="row mt-0 mb-4">
             <div class="col">
-                <div id="carouselId" class="carousel slide" data-ride="carousel">
+                <div id="carouselId" class="carousel slide carousel-fade" data-ride="carousel">
                     <ol class="carousel-indicators">
                         <li data-target="#carouselId" data-slide-to="0" class="active"></li>
                         <li data-target="#carouselId" data-slide-to="1"></li>
@@ -107,21 +107,21 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block w-100" src="images/carousel4.jpg" alt="First slide">
+                            <a href="news.html#news2"> <img class="d-block w-100" src="images/carousel4.jpg" alt="First slide"> </a>
                             <div class="carousel-caption d-none d-md-block">
-                                <p>FILM "THE CHARMER" WINS BELGRADE VICTOR AWARD OF THE 46TH FEST</p>
+                                <p><b> FILM "THE CHARMER" WINS BELGRADE VICTOR AWARD OF THE 46TH FEST</b></p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="images/carousel5.jpg" alt="Second slide">
+                            <a  href="news.html#news1"><img class="d-block w-100" src="images/carousel5.jpg" alt="Second slide"> </a> 
                             <div class="carousel-caption d-none d-md-block">
-                                <p>"THE CHARMER" TRIUMPHS, BELGRADE VICTOR PRESENTED TO NEDA ARNERIĆ AND KAREN SHAKHNAZAROV</p>
+                                <p><b>"THE CHARMER" TRIUMPHS, BELGRADE VICTOR PRESENTED TO NEDA ARNERIĆ AND KAREN SHAKHNAZAROV </b> </p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="images/carousel6.jpg" alt="Third slide">
+                            <a href="news.html#news3"> <img class="d-block w-100" src="images/carousel6.jpg" alt="Third slide"> </a>
                             <div class="carousel-caption d-none d-md-block">
-                                <p>FILMS "EDERLEZI RISING" AND "HITLER’S HOLLYWOOD" RECEIVE TOP AWARDS</p>
+                                <p> <b>FILMS "EDERLEZI RISING" AND "HITLER’S HOLLYWOOD" RECEIVE TOP AWARDS</b> </p>
                             </div>
                         </div>
                     </div>
@@ -152,22 +152,22 @@
                         </div>
                         <div class="row">
                             <div class="col-6 col-md-3 mb-3">
-                                <a href="#">
+                                <a href="html_films/bladerunner2049.html">
                                     <img class="img-fluid" src="images/films/BladeRunner2049.png" alt=" image cap">
                                 </a>
                             </div>
                             <div class="col-6 col-md-3">
-                                <a href="#">
+                                <a href="html_films/rocky.html">
                                     <img class="img-fluid border border-blue" src="images/films/rocky.jpg" alt=" image cap">
                                 </a>
                             </div>
                             <div class="col-6 col-md-3">
-                                <a href="#">
+                                <a href="html_films/terminator.html">
                                     <img class="img-fluid" src="images/films/terminator.jpg" alt=" image cap">
                                 </a>
                             </div>
                             <div class="col-6 col-md-3">
-                                <a href="#">
+                                <a href="html_films/titanic.html">
                                     <img class="img-fluid" src="images/films/titanic.jpg" alt=" image cap">
                                 </a>
                             </div>
@@ -191,32 +191,26 @@
                                 <img class="img-fluid index-about-img mt-0 " src="images/about1.jpg" alt="about1">
                             </div>
                             <div class="col-sm-8 media-body">
-                                <h5 class="mt-2 text-blue">Media heading</h5>
-                                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in
-                                vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla.
-                                Donec lacinia congue felis in faucibus.
+                                <h5 class="mt-2 text-blue">What's a film festival?</h5>
+                                A film festival is an organized, extended presentation of films in one or more cinemas or screening venues, usually in a single city or region. Increasingly, film festivals show some films outdoors.[1] Films may be of recent date and, depending upon the festival's focus, can include international and domestic releases. Some festivals focus on a specific film-maker or genre (e.g., film noir) or subject matter (e.g., horror film festivals). A number of film festivals specialise in short films of a defined maximum length. Film festivals are typically annual events. Some film historians, including Jerry Beck,[2] do not consider film festivals official releases of film.
                             </div>
                         </div>
                         <div class="row media">
                             <div class="col-sm-8 media-body">
-                                <h5 class="mt-2 text-blue">Media heading</h5>
-                                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in
-                                vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla.
-                                Donec lacinia congue felis in faucibus.
+                                <h5 class="mt-2 text-blue">The most popular film festivals</h5>
+                                The most prestigious film festivals in the world are generally considered to be Cannes, Berlin, and Venice.[3] These festivals are sometimes called the "Big Three."[4][5][6] The Toronto International Film Festival is North America's most popular festival in terms of attendance; Time wrote it had "grown from its place as the most influential fall film festival to the most influential film festival, period."[7] The Venice Film Festival is the oldest film festival in the world.[8]
                             </div>
                             <div class="col-sm-4 order-first order-sm-last text-center">
-                                <img class="img-fluid index-about-img mt-4" src="images/about1.jpg" alt="about1">
+                                <img class="img-fluid index-about-img mt-4" src="images/cannes.jpg" alt="about1">
                             </div>
                         </div>
                         <div class="row media">
                             <div class="col-sm-4 text-center">
-                                <img class="img-fluid index-about-img mt-4" src="images/about1.jpg" alt="about1">
+                                <img class="img-fluid index-about-img mt-4" src="images/setup.jpg" alt="about1">
                             </div>
                             <div class="col-sm-8 media-body">
-                                <h5 class="mt-2 text-blue">Media heading</h5>
-                                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in
-                                vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla.
-                                Donec lacinia congue felis in faucibus.
+                                <h5 class="mt-2 text-blue">Film festival business model </h5>
+                                Although there are notable for-profit festivals such as SXSW, most festivals operate on a nonprofit membership-based model, with a combination of ticket sales, membership fees, and corporate sponsorship constituting the majority of revenue. Unlike other arts nonprofits (performing arts, museums, etc.), film festivals typically receive few donations from the general public and are occasionally organized as nonprofit business associations instead of public charities. Film industry members often have significant curatorial input, and corporate sponsors are given opportunities to promote their brand to festival audiences in exchange for cash contributions. Private parties, often to raise investments for film projects, constitute significant "fringe" events. Larger festivals maintain year-round staffs often engaging in community and charitable projects outside festival season.
                             </div>
                         </div>
                     </div>
