--- a/info.html
+++ b/info.html
@@ -134,27 +134,27 @@
                 <h4 class="text-blue">About</h4>
                 <p>
                     Find out more about the
-                    <a href="about.html">festival</a>
+                    <a href="about.html">festival</a>.
                 </p>
                 <h4 class="text-blue">Jury</h4>
                 <p>
-                    See who is the
-                    <a href="jury.html">jury</a>
+                    See detailed information about members of the 
+                    <a href="jury.html">jury</a>.
                 </p>
                 <h4 class="text-blue">Awards</h4>
                 <p>
-                    Find out more about
-                    <a href="awards.html">awards</a>
+                    Find out more about the festival
+                    <a href="awards.html">awards</a>.
                 </p>
                 <h4 class="text-blue">Sponsors</h4>
                 <p>
-                    Find out more about our
-                    <a href="sponsors.html">sponsors</a>
+                    Read about our 
+                    <a href="sponsors.html">sponsors</a> and partners.
                 </p>
                 <h4 class="text-blue">Contact</h4>
                 <p>
                     See how to
-                    <a href="contact.html">contact</a> us
+                    <a href="contact.html">contact</a> us.
                 </p>
             </div>
 
