--- a/news.html
+++ b/news.html
@@ -117,7 +117,7 @@
             <!-- ============== MAIN CONTENT ================ -->
             <div class="col-md-10" id="main_news">
                 <div class="col-12 border border-blue rounded mb-3">
-                    <div class="row mt-3">
+                    <div class="row mt-3" id="news1">
                         <h3> "THE CHARMER" TRIUMPHS, BELGRADE VICTOR PRESENTED TO NEDA ARNERIĆ AND KAREN SHAKHNAZAROV
                         </h3>
                     </div>
@@ -221,7 +221,7 @@
                 </div>
 
                 <div class="col-12  border border-blue rounded  mb-3">
-                    <div class="row mt-3 text-uppercase">
+                    <div class="row mt-3 text-uppercase" id="news2">
                         <h3> FILM "THE CHARMER" WINS BELGRADE VICTOR AWARD OF THE 46TH FEST </h3>
                     </div>
                     <div class="row mt-3">
@@ -248,7 +248,7 @@
                 </div>
 
                 <div class="col-12  border border-blue rounded  mb-3">
-                    <div class="row mt-3 text-uppercase">
+                    <div class="row mt-3 text-uppercase" id="news3">
                         <h3> FILMS "EDERLEZI RISING" AND "HITLER’S HOLLYWOOD" RECEIVE TOP AWARDS
                         </h3>
                     </div>
