--- a/repertoire.html
+++ b/repertoire.html
@@ -133,17 +133,17 @@
 
                 <h4 class="text-blue">Films</h4>
                 <p>Find out more about the
-                    <a href="films.html">films</a>
+                    <a href="films.html">films</a> promoted during the festival.
                 </p>
                 <h4 class="text-blue">Showings</h4>
                 <p>
-                    Find out more about
-                    <a href="showings.html">showings</a>
+                    Get details for all
+                    <a href="showings.html">showings</a> of our films.
                 </p>
                 <h4 class="text-blue">Tickets</h4>
                 <p>
-                    Find out more about where to bye
-                    <a href="tickets.html">tickets</a>
+                    Find out how you can purchase 
+                    <a href="tickets.html">tickets</a>.
                 </p>
             </div>
 
