--- a/html_films/terminator.html
+++ b/html_films/terminator.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title id="name">Rocky</title>
+    <title id="name">Terminator</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -24,7 +24,7 @@
 
 </head>
 
-<body onload="showFilm(5)">
+<body onload="showFilm(6)">
 
     <!-- ============== FILM FESTIVAL NAVBAR ================ -->
     <nav class="navbar navbar-expand-md navbar-light bg-blue">
@@ -110,7 +110,7 @@
                         <li class="breadcrumb-item" aria-current="page">
                             <a href="../films.html"> Films </a>
                         </li>
-                        <li class="breadcrumb-item active" aria-current="page">Rocky</li>
+                        <li class="breadcrumb-item active" aria-current="page">Terminator</li>
                     </ol>
                 </nav>
 
