--- a/jury.html
+++ b/jury.html
@@ -138,81 +138,50 @@
                 <div class="row">
                     <div class="col">
                         <h2 class="text-blue">Milčo Mančevski</h2>
-                        <p class="lead">Reditelj, Makedonija/SAD</p>
-                        <p>
-                            Milčo Mančevski je makedonski reditelj, scenarista, fotograf i umetnik koji živi i radi u Njujorku. Njegov debitantski dugometražni
-                            film Pre kiše (Pred doždot, 1994) bio je nominovan za nagradu Oskar, a osvojio je Zlatnog lava
-                            na Filmskom festivalu u Veneciji, kao i nagrade FIPRESCI i Independent Spirit i još trideset
-                            drugih priznanja. Njujork tajms uključio je ovo ostvarenje na listu „1000 najboljih filmova ikada
-                            snimljenih”. Mančevski je režirao još četiri dugometražna filma - Bikini Mun (2017), Majke (Majki,
-                            2010), Senki (2007) i Dust (2001), jednu epizodu serije The Wire (HBO) i pedeset kratkih formi,
-                            uključujući učešće u projektu Venice Feature Reloaded (2013) segmentom pod nazivom Thursday.
+                        <p class="lead">Director, FYROM/USA</p>
+                        <p>Milo Manchevski is a Macedonian director, screenwriter, photographer and artist who lives and works in New York. His debut feature
+                            Pre Rain (Before the Rain, 1994) was nominated for the Oscar Award, and won the Golden Lion
+                            at the Venice Film Festival, as well as the FIPRESCI and Independent Spirit prizes and thirty
+                            other awards. The New York Times included this achievement on the list of "1000 Best Movies ever."
+                            recorded ". Mancevski directed four more feature films - Bikini Mun (2017), Majke (Majki,
+                            2010), Senki (2007) and Dust (2001), one episode of the The Wire series (HBO) and fifty short forms,
+                            including participation in the Venice Feature Reloaded (2013) project called the Thursday.
                         </p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col">
                         <h2 class="text-blue">Elma Tataragić</h2>
-                        <p class="lead">Selektor Festivala, Profesor, Bosna i Hercegovina</p>
+                        <p class="lead">Festival Selector, Professor, Bosnia and Herzegovina</p>
                         <p>
-                            Elma Tataragić rođena je u Sarajevu 1976. godine. Diplomirala je dramaturgiju na Akademiji scenskih umjetnosti u Sarajevu
-                            2001. Jedan je od osnivača Sarajevo Film Festivala, na kojem je selektor Takmičarskog programa.
-                            Od 2002. predaje scenario na Akademiji scenskih umjetnosti Sarajevo, a objavila je i knjigu "Stil
-                            filmskog scenarija" 2011. godine. Članica je Udruženja filmskih radnika Bosne i Hercegovine i
-                            Evropske filmske akademije. Sarađivala je na brojnim filmovima kao što su Prvo smrtno iskustvo,
-                            Sjever je poludio, itd. Koscenarista je i producent igranog filma Snijeg, koji je premijerno
-                            prikazan na Filmskom festivalu u Kanu 2008. Godine 2016. završila je kratki igrani film Sjećam
-                            se koji je uspešno prikazan na festivalima širom sveta, a 2017. na Filmskom festivalu u Berlinu
-                            premijerno je prikazan film Kada dan nije imao ime (Koga denot nemaše ime), Teone Mitevske, za
-                            koji je napisala scenario.
+                            Elma Tataragić was born in Sarajevo in 1976. Graduated in dramaturgy at the Academy of Performing Arts in Sarajevo in 2001. She is one of the founders of the Sarajevo Film Festival, where she is the Competition Program Selector. Since 2002, she has been teaching a screenplay at the Sarajevo Academy of Performing Arts, and she also published the book "Style of the Film Scenario" in 2011. Member of the Association of Film Workers of Bosnia and Herzegovina and the European Film Academy. She has worked on numerous films such as The First Mortality Experience, the North is crazy, etc. Koscenarista is also the producer of the feature film Snow, which was premiered at the Cannes Film Festival in 2008. In 2016 she finished short feature film I Remember, which was successfully screened at festivals all over the world, and in 2017 at the Berlin Film Festival premiered the film When the day did not have a name (Who did not have a name), Teone Mitevska, for which the script was written.
                         </p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col">
                         <h2 class="text-blue">Jovan Jovanović</h2>
-                        <p class="lead">Reditelj, Srbija</p>
+                        <p class="lead">Director, Serbia</p>
                         <p>
-                            Rođen je u Beogradu 1940. godine. Diplomirao je režiju na Akademiji za pozorište, film, radio i televiziju srednjemetražnim
-                            igranim filmom Izrazito ja (1967), koji je proglašen najboljim filmom u svim kategorijama na
-                            Festivalu mladih autora u Njujorku. Njegov kratkometražni dokumentarni film Kolt 15 Gap (1971)
-                            nagrađen je na festivalima u Oberhauzenu, Utrehtu, Beogradu. Najvažniji Jovanovićevi dokumentarni
-                            filmovi su: Revolucija koja teče (1972), Radni ljudi umetnici (1975), Narkomani (1976), Čovek
-                            koji je pravio sisteme (1990), Vukovar zašto (1991). Njegovi najvažniji igrani filmovi su Izrazito
-                            ja (1969), Mlad i zdrav kao ruža (1971), Pejzaži u magli (1984).
+                            Born in Belgrade in 1940. He graduated from Directors at the Academy of Theater, Film, Radio and Television in the middle-length feature film Izrazito ja (1967), which was named the best film in all categories at the New York Festival of Young Authors. His short documentary film Kolt 15 Gap (1971) was awarded at festivals in Oberhausen, Utrecht, Belgrade. The most important Jovanovic's documentaries are: The Running Revolution (1972), Working People Artists (1975), Narcotics (1976), The Man Who Made Systems (1990), Vukovar Why (1991). His most important feature films are Express Me (1969), Young and Healthy Rose (1971), Landscape in the Fog (1984).
                         </p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col">
                         <h2 class="text-blue">Mila Turajlić</h2>
-                        <p class="lead">Reditelj, Srbija</p>
+                        <p class="lead">Director, Serbia</p>
                         <p>
-                            Mila Turajlić rođena je 4. jula, 1979. u Beogradu. Studirala je na London School of Economics, kao i na FDU u Beogradu. Iskustvo
-                            je stekla radeći na filmovima kao što su Apocalypto, Fade to Black i Brothers Bloom, a od 2005.
-                            je producent festivala dokumentarnog filma Sedam veličanstvenih u Beogradu. Njen debitantski
-                            dokumentarni film Cinema Komunisto premijerno je prikazan na IDFA festivalu (International Documentary
-                            Filmfestival Amsterdam) 2010, a osvojio je 16 nagrada širom sveta, uključujući i nagradu Zlatni
-                            Hugo na festivalu u Čikagu. Njen drugi dugometražni dokumentarni film, Druga strana svega (2017),
-                            prikazan je na TIFF, filmskom festivalu u Torontu, a na IDFA festivalu je osvojio nagradu za
-                            najbolji dugometražni film.
+                            Mila Turajlić was born on July 4, 1979 in Belgrade. She studied at the London School of Economics, as well as at the FDU in Belgrade. She has gained experience working on films such as Apocalypto, Fade to Black and Brothers Bloom, and since 2005 she has been a producer of the documentary film Seven Magnificent in Belgrade. Her debut documentary Cinema Komunisto was premiered at the International Documentary Filmfestival Amsterdam 2010, and won 16 awards around the world, including the Golden Hugo prize at the Chicago Film Festival. Her second feature-length documentary, The Other Side of Everything (2017), was screened at the TIFF Film Festival in Toronto, and at the IDFA Festival she won the Best Feature Film Award.
                         </p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col">
                         <h2 class="text-blue">Gordan Kičić</h2>
-                        <p class="lead">Glumac, Srbija</p>
+                        <p class="lead">Actor, Serbia</p>
                         <p>
-                            Gordan Kičić je rođen 5. avgusta 1977. godine u Beogradu. Diplomirao je glumu na FDU u Beogradu u klasi prof. Predraga Bajčetića,
-                            2001. godine. Stalni je član ansambla Pozorišta Atelje 212 od 2009. godine. Ostvario je zapažene
-                            uloge u filmovima Ustanička ulica, Kako su me ukrali Nemci, Turneja, Sedam i po, Kad porastem
-                            biću Kengur, serijama Lisice, Sva ta ravnica, Jagodići, Senke nad Balkanom... Za svoja dostignuća
-                            na filmu i u pozorištu osvojio je brojne nagrade- "Car Konstantin" na Filmskim susretima u Nišu
-                            za ulogu u filmu Mala noćna muzika, Velika povelja za ulogu u filmu Nataša, "Zoranov brk" na
-                            Danima Zorana Radmilovića u Zaječaru za ulogu Samoubice I u predstavi Nevinost. Nagrada TV Novosti
-                            "Zoran Radmilović" za glumačku bravuru na Festivalu Sterijino pozorje, za ulogu Vufa u predstavi
-                            Kosa.
+                            Gordan Kicic was born on August 5, 1977 in Belgrade. He graduated from the FDU in Belgrade in the class of prof. Predrag Bajcetic, 2001. He is a permanent member of the Atelje 212 Theater from 2009. He has made remarkable roles in Ustanička Street films, How the Germans, Tourneys, Seven and ace have stolen me. When I grow up, I will grow up with the Kengur, Lisica series, All that Plain, Jagodići, Shadows over the Balkans ... For his achievements in film and theater, numerous awards - "Car Constantine" at the Film Meetings in Nis for the role in the film Little Night Music, the Grand Chapters for the role in the film Natasa, "Zoran's Brk" in the Days of Zoran Radmilović in Zaječar for the role of Samoubica I in the play Nevinost. TV Novosti Award "Zoran Radmilović" for the acting brass at the Sterijino pozorje Festival, for the role of Vuf in the play Kos.
                         </p>
                     </div>
                 </div>
