--- a/vesti.html
+++ b/vesti.html
@@ -116,7 +116,7 @@
             <!-- ============== MAIN CONTENT ================ -->
             <div class="col-md-10" id="main_news">
                 <div class="col-12 border border-blue rounded mb-3">
-                    <div class="row mt-3">
+                    <div class="row mt-3" id="vest1">
                         <h3> ZA NAMA JE 46. FEST I DESET UZBUDLJIVIH FESTIVALSKIH DANA NAJVEĆE FILMSKE SMOTRE U SRBIJI
                         </h3>
                     </div>
@@ -233,7 +233,7 @@
                 </div>
 
                 <div class="col-12  border border-blue rounded  mb-3">
-                    <div class="row mt-3 text-uppercase">
+                    <div class="row mt-3 text-uppercase" id="vest3">
                         <h3> FEST-OVA PUBLIKA IMALA JE PRILIKE DA POGLEDA ČAK ŠEST NASLOVA NAGRADJENIH OSKAROM
                         </h3>
                     </div>
@@ -302,7 +302,7 @@
 
 
                 <div class="col-12  border border-blue rounded mb-3">
-                    <div class="row mt-3 text-uppercase">
+                    <div class="row mt-3 text-uppercase" id="vest2">
                         <h3> FILM ŠARMER POBEDNIK 46. FEST-A </h3>
                     </div>
                     <div class="row mt-3">
