--- a/html_films/aftermath.html
+++ b/html_films/aftermath.html
@@ -24,7 +24,7 @@
 
 </head>
 
-<body onload="showFilm(0)">
+<body onload="showFilm(0, false)">
 
     <!-- ============== FILM FESTIVAL NAVBAR ================ -->
     <nav class="navbar navbar-expand-md navbar-light bg-blue">
@@ -57,25 +57,25 @@
                     <li class="nav-item dropdown">
                         <a href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <span class="nav-link h4 d-md-none">Info</span>
-                            <a href="info.html" class="nav-link h4 d-none d-md-block">Info</a>
+                            <a href="../info.html" class="nav-link h4 d-none d-md-block">Info</a>
                         </a>
                         <div class="dropdown-menu bg-blue" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item h6 rounded" href="about.html">About</a>
-                            <a class="dropdown-item h6 rounded" href="jury.html">Jury</a>
-                            <a class="dropdown-item h6 rounded" href="awards.html">Awards</a>
-                            <a class="dropdown-item h6 rounded" href="sponsors.html">Sponsors</a>
-                            <a class="dropdown-item h6 rounded" href="contact.html">Contact</a>
+                            <a class="dropdown-item h6 rounded" href="../about.html">About</a>
+                            <a class="dropdown-item h6 rounded" href="../jury.html">Jury</a>
+                            <a class="dropdown-item h6 rounded" href="../awards.html">Awards</a>
+                            <a class="dropdown-item h6 rounded" href="../sponsors.html">Sponsors</a>
+                            <a class="dropdown-item h6 rounded" href="../contact.html">Contact</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
                         <a href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <span class="nav-link h4 d-md-none">Repertoire</span>
-                            <a href="repertoire.html" class="nav-link h4 d-none d-md-block">Repertoire</a>
+                            <a href="../repertoire.html" class="nav-link h4 d-none d-md-block">Repertoire</a>
                         </a>
                         <div class="dropdown-menu bg-blue" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item h6 rounded" href="films.html">Films</a>
-                            <a class="dropdown-item h6 rounded" href="showings.html">Showings</a>
-                            <a class="dropdown-item h6 rounded" href="tickets.html">Tickets</a>
+                            <a class="dropdown-item h6 rounded" href="../films.html">Films</a>
+                            <a class="dropdown-item h6 rounded" href="../showings.html">Showings</a>
+                            <a class="dropdown-item h6 rounded" href="../tickets.html">Tickets</a>
                         </div>
                     </li>
                     <li class="nav-item">
@@ -133,7 +133,7 @@
 
                 <div class="row">
                     <div class="col-md-4">
-                        <img class="img-fluid d-block mx-auto" src="../images/films/aftermath.png" alt="Aftermath" id="img">
+                        <img class="img-fluid d-block mx-auto" src="" alt="" id="img">
                     </div>
                     <div class="col-md-8">
                         <div class="row">
@@ -231,7 +231,7 @@
                         </div>
 
                         <div class="mt-3 card text-center" id="showing3">
-                            <div class="card-header bg-blue p-1 font-weight-bold font-italic" id="place13"> </div>
+                            <div class="card-header bg-blue p-1 font-weight-bold font-italic" id="place3"> </div>
                             <div class="card-body p-0">
                                 <b> Date: </b>
                                 <span id="date3"> </span>
