--- a/html_films/creed.html
+++ b/html_films/creed.html
@@ -24,7 +24,7 @@
 
 </head>
 
-<body onload="showFilm(2)">
+<body onload="showFilm(2, false)">
 
     <!-- ============== FILM FESTIVAL NAVBAR ================ -->
     <nav class="navbar navbar-expand-md navbar-light bg-blue">
@@ -57,25 +57,25 @@
                     <li class="nav-item dropdown">
                         <a href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <span class="nav-link h4 d-md-none">Info</span>
-                            <a href="info.html" class="nav-link h4 d-none d-md-block">Info</a>
+                            <a href="../info.html" class="nav-link h4 d-none d-md-block">Info</a>
                         </a>
                         <div class="dropdown-menu bg-blue" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item h6 rounded" href="about.html">About</a>
-                            <a class="dropdown-item h6 rounded" href="jury.html">Jury</a>
-                            <a class="dropdown-item h6 rounded" href="awards.html">Awards</a>
-                            <a class="dropdown-item h6 rounded" href="sponsors.html">Sponsors</a>
-                            <a class="dropdown-item h6 rounded" href="contact.html">Contact</a>
+                            <a class="dropdown-item h6 rounded" href="../about.html">About</a>
+                            <a class="dropdown-item h6 rounded" href="../jury.html">Jury</a>
+                            <a class="dropdown-item h6 rounded" href="../awards.html">Awards</a>
+                            <a class="dropdown-item h6 rounded" href="../sponsors.html">Sponsors</a>
+                            <a class="dropdown-item h6 rounded" href="../contact.html">Contact</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
                         <a href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <span class="nav-link h4 d-md-none">Repertoire</span>
-                            <a href="repertoire.html" class="nav-link h4 d-none d-md-block">Repertoire</a>
+                            <a href="../repertoire.html" class="nav-link h4 d-none d-md-block">Repertoire</a>
                         </a>
                         <div class="dropdown-menu bg-blue" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item h6 rounded" href="films.html">Films</a>
-                            <a class="dropdown-item h6 rounded" href="showings.html">Showings</a>
-                            <a class="dropdown-item h6 rounded" href="tickets.html">Tickets</a>
+                            <a class="dropdown-item h6 rounded" href="../films.html">Films</a>
+                            <a class="dropdown-item h6 rounded" href="../showings.html">Showings</a>
+                            <a class="dropdown-item h6 rounded" href="../tickets.html">Tickets</a>
                         </div>
                     </li>
                     <li class="nav-item">
@@ -93,7 +93,6 @@
             </div>
         </nav>
     </header>
-
     <!-- ============== MAIN ================ -->
     <main class="container">
 
@@ -133,15 +132,15 @@
 
                 <div class="row">
                     <div class="col-md-4">
-                        <img class="img-fluid d-block mx-auto" src="../images/films/aftermath.png" alt="Aftermath" id="img">
+                        <img class="img-fluid d-block mx-auto" src="" alt="" id="img">
                     </div>
                     <div class="col-md-8">
                         <div class="row">
                             <div class="col-md-10">
-                                <h2 class="mt-3" id="name1">  </h2>
+                                <h2 class="mt-3" id="name1"> </h2>
                             </div>
                             <div class="col-md-2" id="favourite">
-                                <button type="button" class="btn btn-outline-blue mt-3 ml-3"  onclick="">
+                                <button type="button" class="btn btn-outline-blue mt-3 ml-3" onclick="">
                                     <i class="far fa-heart"></i>
                                 </button>
                             </div>
@@ -149,9 +148,9 @@
                         <p>
                             <dl class="row">
                                 <dt class="col-md-4"> Directed by: </dt>
-                                <dd class="col-md-8" id="director">  </dd>
+                                <dd class="col-md-8" id="director"> </dd>
                                 <dt class="col-md-4"> Running time: </dt>
-                                <dd class="col-md-8" id="runningTime">  </dd>
+                                <dd class="col-md-8" id="runningTime"> </dd>
                                 <dt class="col-md-4"> Starring: </dt>
                                 <dd class="col-md-8" id="actors"> </dd>
                                 <dt class="col-md-4"> Release date: </dt>
@@ -231,7 +230,7 @@
                         </div>
 
                         <div class="mt-3 card text-center" id="showing3">
-                            <div class="card-header bg-blue p-1 font-weight-bold font-italic" id="place13"> </div>
+                            <div class="card-header bg-blue p-1 font-weight-bold font-italic" id="place3"> </div>
                             <div class="card-body p-0">
                                 <b> Date: </b>
                                 <span id="date3"> </span>
@@ -247,52 +246,52 @@
                 </div>
 
 
-            
-            <!-- ============== GALLERY ================ --> 
-            <div class="row mt-5">
-                <div class="col-md-12" id="gallery">
+
+                <!-- ============== GALLERY ================ -->
+                <div class="row mt-5">
+                    <div class="col-md-12" id="gallery">
+                    </div>
+                </div>
+
+                <!-- ============== FORM ================ -->
+                <div class="row mt-5">
+                    <div class="col-md-12" id="reservation">
+                        <h3 class="text-blue"> Reserve your ticket </h3>
+                        <form name="reservationForm" method="" action="">
+                            <div class="form-group">
+                                <label for="nameField"> Name </label>
+                                <input type="text" class="form-control" id="nameField" aria-describedby="nameHelp" placeholder="Enter your name">
+                            </div>
+                            <div class="form-group">
+                                <label for="surnameField"> Surname </label>
+                                <input type="text" class="form-control" id="surnameField" aria-describedby="surnameHelp" placeholder="Enter your surname">
+                            </div>
+                            <div class="form-group">
+                                <label for="phoneField"> Phone </label>
+                                <input type="text" class="form-control" id="phoneField" aria-describedby="phoneHelp" placeholder="Let us know how we can contact you">
+                            </div>
+                            <div class="form-group">
+                                <label for="nameField"> Email </label>
+                                <input type="email" class="form-control" id="mailField" aria-describedby="mailHelp" placeholder="name@example.com">
+                                <small id="emailHelp" class="form-text text-muted"> We'll never share your email address with anyone else. </small>
+                            </div>
+
+                            <div class="form-group">
+                                <label for="showingChoice"> Choose a showing </label>
+                                <select class="form-control" id="showingChoice">
+                                    <option id="o1"></option>
+                                    <option id="o2"></option>
+                                    <option id="o3"></option>
+                                </select>
+                            </div>
+                            <button type="" class="btn btn-outline-blue mt-3" onclick="checkData(2)"> Reserve </button>
+                        </form>
+                    </div>
                 </div>
             </div>
 
-            <!-- ============== FORM ================ -->
-            <div class="row mt-5">
-                <div class="col-md-12" id="reservation">
-                    <h3 class="text-blue"> Reserve your ticket </h3>
-                    <form name="reservationForm" method="" action="">
-                        <div class="form-group">
-                            <label for="nameField"> Name </label>
-                            <input type="text" class="form-control" id="nameField" aria-describedby="nameHelp" placeholder="Enter your name">
-                        </div>
-                        <div class="form-group">
-                            <label for="surnameField"> Surname </label>
-                            <input type="text" class="form-control" id="surnameField" aria-describedby="surnameHelp" placeholder="Enter your surname">
-                        </div>
-                        <div class="form-group">
-                            <label for="phoneField"> Phone </label>
-                            <input type="text" class="form-control" id="phoneField" aria-describedby="phoneHelp" placeholder="Let us know how we can contact you">
-                        </div>
-                        <div class="form-group">
-                            <label for="nameField"> Email </label>
-                            <input type="email" class="form-control" id="mailField" aria-describedby="mailHelp" placeholder="name@example.com">
-                            <small id="emailHelp" class="form-text text-muted"> We'll never share your email address with anyone else. </small>
-                        </div>
-
-                        <div class="form-group">
-                            <label for="showingChoice"> Choose a showing </label>
-                            <select class="form-control" id="showingChoice">
-                                <option id="o1"></option>
-                                <option id="o2"></option>
-                                <option id="o3"></option>
-                            </select>
-                        </div>
-                        <button type="" class="btn btn-outline-blue mt-3" onclick="checkData(0)"> Reserve </button>
-                    </form>
-                </div>
-            </div>
-        </div>
-
-        <!-- ============== BANNER ================ -->
-        <!-- <div class="col-md-2">
+            <!-- ============== BANNER ================ -->
+            <!-- <div class="col-md-2">
                 <a href="" class="d-none d-md-block">
                     <img src="../images/banner.jpg" alt="banner" class="w-100 pb-2">
                 </a>
