--- a/omiljeno.html
+++ b/omiljeno.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Informacije</title>
+    <title>Omiljeno</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -23,8 +23,7 @@
 
 </head>
 
-<body>
-
+<body onload="showFavourites(true)">
     <!-- ============== FILM FESTIVAL NAVBAR ================ -->
     <nav class="navbar navbar-expand-md navbar-light bg-blue">
         <div class="navbar-brand">
@@ -35,7 +34,7 @@
                 <span class="h1 align-middle text-black" id="festival-title">Film Festival 2018</span>
             </a>
         </div>
-        <a href="info.html" id="language" class="ml-auto mr-1">
+        <a href="favourites.html" id="language" class="ml-auto mr-1">
             <img src="images/eng_flag_48.png" alt="english-language" class="mr-auto d-none d-sm-block">
             <img src="images/eng_flag_32.png" alt="english-language" class="mr-auto d-sm-none">
         </a>
@@ -92,6 +91,8 @@
             </div>
         </nav>
     </header>
+
+
     <!-- ============== MAIN ================ -->
     <main class="container">
 
@@ -105,56 +106,18 @@
                                 <i class="fa fa-home"></i>
                             </a>
                         </li>
-                        <li class="breadcrumb-item active">
-                            Informacije
-                        </li>
+                        <li class="breadcrumb-item active" aria-current="page">Omiljeno</li>
                     </ol>
                 </nav>
+
+                <!-- <hr class="bg-blue" /> -->
             </div>
         </div>
-
         <div class="row">
-            <!-- ============== LEFT NAVIGATION ================ -->
-            <nav class="col-md-3 col-lg-2 mb-3">
-                <div class="btn-group-vertical w-100" role="group">
-                    <a href="o-festivalu.html" class="btn btn-outline-blue">O festivalu</a>
-                    <a href="ziri.html" class="btn btn-outline-blue">Žiri</a>
-                    <a href="nagrade.html" class="btn btn-outline-blue">Nagrade</a>
-                    <a href="sponzori.html" class="btn btn-outline-blue">Sponzori</a>
-                    <a href="kontakt.html" class="btn btn-outline-blue">Kontakt</a>
-                </div>
-            </nav>
 
             <!-- ============== MAIN CONTENT ================ -->
-            <div class="col-md-7 col-lg-8">
-                <h2 class="text-blue">Informacije</h2>
-                <hr class="bg-blue" />
+            <div class="col-md-10" id="films">
 
-                <h4 class="text-blue">O festivalu</h4>
-                <p>
-                    Saznajte više o
-                    <a href="o-festivalu.html">festivalu</a>
-                </p>
-                <h4 class="text-blue">Žiri</h4>
-                <p>
-                    Pogledajte ko su
-                    <a href="ziri.html">članovi žirija</a>
-                </p>
-                <h4 class="text-blue">Nagrade</h4>
-                <p>
-                    Saznajte više o 
-                    <a href="nagrade.html">nagradama</a>
-                </p>
-                <h4 class="text-blue">Sponzori</h4>
-                <p>
-                    Pogledajte ko su naši
-                    <a href="sponzori.html">sponzori</a>
-                </p>
-                <h4 class="text-blue">Kontakt</h4>
-                <p>
-                    Saznajte kako možete da nas
-                    <a href="kontakt.html">kontaktirate</a>
-                </p>
             </div>
 
             <!-- ============== BANNER ================ -->
@@ -162,10 +125,11 @@
                 <a href="" class="d-none d-md-block">
                     <img src="images/banner1.jpg" alt="banner" class="w-100 pb-2">
                 </a>
-                <a href="" class="d-md-none pt-5">
-                    <img src="images/banner-small.JPG" alt="banner" class="w-100 py-5">
+                <a href="" class="d-md-none">
+                    <img src="images/banner-small.JPG" alt="banner" class="w-100 py-3">
                 </a>
             </div>
+
         </div>
     </main>
 
