--- a/pocetna.html
+++ b/pocetna.html
@@ -107,21 +107,27 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block w-100" src="images/carousel1.jpg" alt="First slide">
+                            <a href="vesti.html#vest1">
+                                <img class="d-block w-100" src="images/carousel1.jpg" alt="First slide">
+                            </a>
                             <div class="carousel-caption d-none d-md-block">
                                 <p>ZA NAMA JE 46. FEST I DESET UZBUDLJIVIH FESTIVALSKIH DANA NAJVEĆE FILMSKE SMOTRE U SRBIJI</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="images/carousel2.jpg" alt="Second slide">
+                            <a href="vesti.html#vest2">
+                                <img class="d-block w-100" src="images/carousel2.jpg" alt="Second slide">
+                            </a>
                             <div class="carousel-caption d-none d-md-block">
                                 <p>FILM ŠARMER POBEDNIK 46. FEST-A</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="images/carousel3.jpg" alt="Third slide">
+                            <a href="vesti.html#vest3">
+                                <img class="d-block w-100" src="images/carousel3.jpg" alt="Third slide">
+                            </a>
                             <div class="carousel-caption d-none d-md-block">
-                                <p>NAGRADA GORKI LIST ZA NAJTRAŽENIJI FILM NA FEST-U</p>
+                                <p>FEST-OVA PUBLIKA IMALA JE PRILIKE DA POGLEDA ČAK ŠEST NASLOVA NAGRADJENIH OSKAROM</p>
                             </div>
                         </div>
                     </div>
@@ -152,22 +158,22 @@
                         </div>
                         <div class="row">
                             <div class="col-6 col-md-3 mb-3">
-                                <a href="#">
+                                <a href="html_films/bladerunner2049-sr.html">
                                     <img class="img-fluid" src="images/films/BladeRunner2049.png" alt=" image cap">
                                 </a>
                             </div>
                             <div class="col-6 col-md-3">
-                                <a href="#">
+                                <a href="html_films/rocky-sr.html">
                                     <img class="img-fluid border border-blue" src="images/films/rocky.jpg" alt=" image cap">
                                 </a>
                             </div>
                             <div class="col-6 col-md-3">
-                                <a href="#">
+                                <a href="html_films/terminator-sr.html">
                                     <img class="img-fluid" src="images/films/terminator.jpg" alt=" image cap">
                                 </a>
                             </div>
                             <div class="col-6 col-md-3">
-                                <a href="#">
+                                <a href="html_films/titanic-sr.html">
                                     <img class="img-fluid" src="images/films/titanic.jpg" alt=" image cap">
                                 </a>
                             </div>
